--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="This is an awesome website">
     <title>Mohit's Website</title>
 </head>
 
 <body>
-    <p>
 
-    </p>
+    <p>This is my <b><i>paragraph</i></b></p>
+
+    <h2>Mohit's Website</h2>
+
+    <p>This is another paragraph</p>
+
+
 </body>
 
 </html>
