--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 
 
     <h2>Mohit's Website</h2>
-    <hr /> <br />
-    <p>This is my <b><i>paragraph</i></b></p>
-    <p>This is another paragraph</p>
+    <hr />
+    <p><big>This</big> <big>is</big> <small> my </small> <b><i>paragraph</i></b></p>
+    <p>
+        H<sub>2</sub>O
+    </p>
+
+    <p>10 <sup>2</sup></p>
 
 
 </body>
