--- a/index.html
+++ b/index.html
@@ -12,14 +12,21 @@
 
 
     <h2>Mohit's Website</h2>
+
+    <!--
+    <h3>Comments are <i>~~Invisible~~</i></h3>
+
+    -->
     <hr />
+    <!--Horizontal 
+        Ruling-->
+
     <p><big>This</big> <big>is</big> <small> my </small> <b><i>paragraph</i></b></p>
     <p>
         H<sub>2</sub>O
     </p>
 
     <p>10 <sup>2</sup></p>
-
 
 </body>
 
