--- a/index.html
+++ b/index.html
@@ -8,26 +8,23 @@
     <title>Mohit's Website</title>
 </head>
 
-<body>
+<body style="background-color: lightblue;">
 
-
+    <!--
     <h2>Mohit's Website</h2>
+    -->
 
     <!--
     <h3>Comments are <i>~~Invisible~~</i></h3>
 
     -->
+
+    <h2 style="color: green;">Style and Colors</h2>
     <hr />
     <!--Horizontal 
         Ruling-->
 
-    <p><big>This</big> <big>is</big> <small> my </small> <b><i>paragraph</i></b></p>
-    <p>
-        H<sub>2</sub>O
-    </p>
-
-    <p>10 <sup>2</sup></p>
-
+    <p style="color:red; background-color: black;">You can style your html and make it look pretty</p>
 </body>
 
 </html>
