--- a/index.html
+++ b/index.html
@@ -8,23 +8,33 @@
     <title>Mohit's Website</title>
 </head>
 
-<body style="background-color: lightblue;">
+<body>
+    <header>
+        <nav>
 
-    <!--
-    <h2>Mohit's Website</h2>
-    -->
+        </nav>
+    </header>
+    <main>
+        <article>
+            <section>
+                <h2>First section</h2>
+                <p>This is the first line</p>
+            </section>
 
-    <!--
-    <h3>Comments are <i>~~Invisible~~</i></h3>
+            <section>
+                <aside>
+                    <p>An advertisement</p>
+                </aside>
+            </section>
+            <section>
+                <h3>Second section</h3>
+                <p>This is the second line</p>
+            </section>
+        </article>
+    </main>
+    <footer>
 
-    -->
-
-    <h2 style="color: green;">Style and Colors</h2>
-    <hr />
-    <!--Horizontal 
-        Ruling-->
-
-    <p style="color:red; background-color: black;">You can style your html and make it look pretty</p>
+    </footer>
 </body>
 
 </html>
