--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <header>
         <nav>
-
+            <a href="https://www.google.com">
+                <h1 style="color: yellowgreen">Google's Homepage</h1>
+            </a>
         </nav>
     </header>
     <main>
