--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body>
     <header>
         <nav>
-            <a href="https://www.google.com">
-                <h1 style="color: yellowgreen">Google's Homepage</h1>
+            <a href="https://www.google.com" ; target="_blank">
+                <h1 style="color: yellowgreen; background-color: royalblue">
+                    Google's <b>Homepage</b>
+                </h1>
             </a>
         </nav>
     </header>
