--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <article>
             <section>
-                <h2>First section</h2>
+                <h2 style="font-size: xlarge;">First section</h2>
                 <p>This is the first line</p>
             </section>
 
