--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Mohit's Website</title>
 </head>
 
-<body>
+<body style="background-color: thistle;">
     <header>
         <nav>
             <a href="https://www.google.com" ; target="_blank">
@@ -24,7 +24,8 @@
                 <h2 style="font-size: xlarge;">First section</h2>
                 <p>This is the first line</p>
             </section>
-
+            <!--Section 2
+            -->
             <section>
                 <aside>
                     <p>An advertisement</p>
