--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Mohit's Website</title>
 </head>
 
-<body style="background-color: thistle;">
+<body style="background-color:teal;">
     <header>
         <nav>
             <a href="https://www.google.com" ; target="_blank">
