--- a/index2.html
+++ b/index2.html
@@ -3,11 +3,25 @@
 <html>
 
 <head>
-
+    <meta charset="UTF-8">
+    <meta name="description" content="This is an awesome website">
+    <title>Mohit's Website 2</title>
 </head>
 
 <body>
+    <header>
+        <h2>This is the second website</h2>
+    </header>
 
+    <main>
+        <a href="https://www.google.com" ; target="_blank">
+            <h3><b><sup>Google's</sup></b> <sub>Homepage</sub></h3>
+        </a>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
