--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Mohit's Website</title>
 </head>
 
-<body style="background-color:teal;">
+<body style="background-color:thistle;">
     <header>
         <nav>
-            <a href="https://www.google.com" ; target="_blank">
+            <a href="index2.html" ; target="_blank">
                 <h1 style="color: yellowgreen; background-color: royalblue">
-                    Google's <b>Homepage</b>
+                    Page 2 <b>Homepage</b>
                 </h1>
             </a>
         </nav>
