--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
         <h2>This is the second website</h2>
     </header>
 
-    <main>
+    <main style="background-color:tomato;">
         <a href="https://www.google.com" ; target="_blank">
             <h3><b><sup>Google's</sup></b> <sub>Homepage</sub></h3>
         </a>
