--- a/index2.html
+++ b/index2.html
@@ -17,6 +17,10 @@
         <a href="https://www.google.com" ; target="_blank">
             <h3><b><sup>Google's</sup></b> <sub>Homepage</sub></h3>
         </a>
+
+        <a href="https://www.amazon.com" ; target="_blank">
+            <h4>Amazon webpage</h4>
+        </a>
     </main>
 
     <footer>
