Linking with Images

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                     Page 2 <b>Homepage</b>
                 </h1>
             </a>
+
+            <a href="cat.jpg">Cat</a>
         </nav>
     </header>
     <main>
