--- a/image.html
+++ b/image.html
@@ -14,7 +14,8 @@
         alt="A really scary dino" />
 
     <br />
-    <img width="100" height="100" src="cat.jpg" , alt="A cute cat" />
+    <img width="100" height="200" src="cat.jpg" , alt="A cute cat" />
+    <!-- Keep aspect ratio the same-->
 </body>
 
 </html>
