Embedding image with link

--- a/image.html
+++ b/image.html
@@ -14,8 +14,10 @@
         alt="A really scary dino" />
 
     <br />
-    <img width="100" src="cat.jpg" , alt="A cute cat" />
-    <!-- Keep aspect ratio the same-->
+    <a href="cat.jpg">
+        <img width="100" src="cat.jpg" , alt="A cute cat" />
+        <!-- Keep aspect ratio the same-->
+    </a>
 </body>
 
 </html>
