--- a/UFC.html
+++ b/UFC.html
@@ -8,7 +8,18 @@
     <title>UFC 262</title>
 </head>
 
-<body>
+<body style="font-family: Verdana, Geneva, Tahoma, sans-serif; background-color: thistle;">
+    <header>
+        <h1><b>UFC 262</b></h1>
+    </header>
+
+    <main>
+        <img src="" </main>
+
+        <footer>
+
+        </footer>
+
 
 </body>
 
