--- a/UFC.html
+++ b/UFC.html
@@ -10,15 +10,18 @@
 
 <body style="font-family: Verdana, Geneva, Tahoma, sans-serif; background-color: thistle;">
     <header>
-        <h1><b>UFC 262</b></h1>
+        <h1 style="color:rgb(245, 209, 9); background-color: black; text-align: center;"><b>UFC 262</b></h1>
     </header>
 
     <main>
-        <img src="" </main>
 
-        <footer>
+        <img width=1250, src="https://www.mykhel.com/img/2021/05/ufc-262-poster-1620802055.jpg" , alt="UFC 262 Poster"
+            , />
+    </main>
 
-        </footer>
+    <footer>
+
+    </footer>
 
 
 </body>
