--- a/UFC.html
+++ b/UFC.html
@@ -14,9 +14,34 @@
     </header>
 
     <main>
-
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/PZSBcdl34OY" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
         <img width=1250, src="https://www.mykhel.com/img/2021/05/ufc-262-poster-1620802055.jpg" , alt="UFC 262 Poster"
             , />
+
+        <hr />
+        <section>
+            <p style="color:rgb(245, 209, 9); background-color: black; font-size: x-large; text-align: center;">UFC 262:
+                Oliveira vs. Chandler
+                was a mixed martial
+                arts event produced by the Ultimate
+                Fighting Championship
+                that took place on May 15, 2021 at the Toyota Center in Houston, Texas, United States.
+            </p>
+        </section>
+
+        <section>
+            <p style="color:rgb(245, 209, 9); background-color: black; font-size: large; text-align: center;">A UFC
+                Lightweight Championship bout for the vacant title between former three-time Bellator Lightweight
+                World Champion Michael Chandler and Charles Oliveira headlined the event. Former champion Khabib
+                Nurmagomedov announced his retirement immediately after defending his title at UFC 254 last October,
+                citing his father's death from complications related to COVID-19 in July as the main reason behind
+                it. Despite his announcement, the title was never officially vacated as UFC President Dana White said
+                several times that he believed Nurmagomedov would still fight again. White finally conceded on March 19
+                as he confirmed Nurmagomedov's retirement.</p>
+        </section>
     </main>
 
     <footer>
