Shift to folder UFC

--- a/UFC/UFC.html
+++ b/UFC/UFC.html
@@ -14,13 +14,10 @@
     </header>
 
     <main>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/PZSBcdl34OY" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        <img width=1250, src="https://www.mykhel.com/img/2021/05/ufc-262-poster-1620802055.jpg" , alt="UFC 262 Poster"
-            , />
-
+        <a href="Video.html" ; target="_blank">
+            <img width=1250, src="https://www.mykhel.com/img/2021/05/ufc-262-poster-1620802055.jpg" ,
+                alt="UFC 262 Poster" , />
+        </a>
         <hr />
         <section>
             <p style="color:rgb(245, 209, 9); background-color: black; font-size: x-large; text-align: center;">UFC 262:
