Type of ordered list

--- a/List.html
+++ b/List.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <ol>
+    <ol type="A">
         <li><a href="$">Apples</a></li>
         <li>Oranges</li>
         <li>Bananas</li>
