Embedding of list

--- a/List.html
+++ b/List.html
@@ -13,6 +13,9 @@
     <ol type="A">
         <li><a href="$">Apples</a></li>
         <li>Oranges</li>
+        <ol>
+            <li>Item 1</li>
+        </ol>
         <li>Bananas</li>
     </ol>
 
