--- a/List.html
+++ b/List.html
@@ -10,14 +10,12 @@
 
 <body>
 
-    <ol type="A">
-        <li><a href="$">Apples</a></li>
-        <li>Oranges</li>
-        <ol>
-            <li>Item 1</li>
-        </ol>
-        <li>Bananas</li>
-    </ol>
+    <dl>
+        <dt>Apples</dt>
+        <dd> - They are red</dd>
+        <dt>Oranges</dt>
+        <dd> - They are Oranges</dd>
+    </dl>
 
 </body>
 
