Ordered List of Participants

--- a/UFC/UFC.html
+++ b/UFC/UFC.html
@@ -29,6 +29,32 @@
             </p>
         </section>
 
+        <hr />
+
+        <section style="text-align: center; background-color: black;">
+            <ol type="I" , style="font-weight: bolder; color:rgb(245, 209, 9)">
+                <li> <a href="https://en.wikipedia.org/wiki/Charles_Oliveira" , target=" _blank">Charles Oliveira</a> vs
+                    <a href="https://en.wikipedia.org/wiki/Michael_Chandler" , target="_blank">Michael Chandler</a>
+                </li>
+                <li> <a href="https://en.wikipedia.org/wiki/Charles_Oliveira" , target=" _blank">Beneil Dariush</a> vs
+                    <a href="https://en.wikipedia.org/wiki/Michael_Chandler" , target="_blank">Tony Ferguson</a>
+                </li>
+                <li> <a href="https://en.wikipedia.org/wiki/Charles_Oliveira" , target=" _blank">Charles Oliveira</a> vs
+                    <a href="https://en.wikipedia.org/wiki/Michael_Chandler" , target="_blank">Michael Chandler</a>
+                </li>
+                <li> <a href="https://en.wikipedia.org/wiki/Charles_Oliveira" , target=" _blank">Charles Oliveira</a> vs
+                    <a href="https://en.wikipedia.org/wiki/Michael_Chandler" , target="_blank">Michael Chandler</a>
+                </li>
+                <li> <a href="https://en.wikipedia.org/wiki/Charles_Oliveira" , target=" _blank">Charles Oliveira</a> vs
+                    <a href="https://en.wikipedia.org/wiki/Michael_Chandler" , target="_blank">Michael Chandler</a>
+                </li>
+                <li></li>
+                <li>Rogério Bontorin vs Matt Schnell</li>
+                <li>Katlyn Chookagian vs Viviane Araújo</li>
+                <li>Edson Barboza vs Shane Burgos</li>
+            </ol>
+        </section>
+
         <section>
             <p style="color:rgb(245, 209, 9); background-color: black; font-size: large; text-align: center;">A UFC
                 Lightweight Championship bout for the vacant title between former three-time Bellator Lightweight
