Figther update with a href links

--- a/UFC/UFC.html
+++ b/UFC/UFC.html
@@ -39,19 +39,17 @@
                 <li> <a href="https://en.wikipedia.org/wiki/Charles_Oliveira" , target=" _blank">Beneil Dariush</a> vs
                     <a href="https://en.wikipedia.org/wiki/Michael_Chandler" , target="_blank">Tony Ferguson</a>
                 </li>
-                <li> <a href="https://en.wikipedia.org/wiki/Charles_Oliveira" , target=" _blank">Charles Oliveira</a> vs
-                    <a href="https://en.wikipedia.org/wiki/Michael_Chandler" , target="_blank">Michael Chandler</a>
+                <li> <a href="https://en.wikipedia.org/wiki/Charles_Oliveira" , target=" _blank">Rogerio Bontorin</a> vs
+                    <a href="https://en.wikipedia.org/wiki/Michael_Chandler" , target="_blank">Matt Schnell</a>
                 </li>
-                <li> <a href="https://en.wikipedia.org/wiki/Charles_Oliveira" , target=" _blank">Charles Oliveira</a> vs
-                    <a href="https://en.wikipedia.org/wiki/Michael_Chandler" , target="_blank">Michael Chandler</a>
+                <li> <a href="https://en.wikipedia.org/wiki/Charles_Oliveira" , target=" _blank">Katlyn Chookagian</a>
+                    vs
+                    <a href="https://en.wikipedia.org/wiki/Michael_Chandler" , target="_blank">Viviane Araujo</a>
                 </li>
-                <li> <a href="https://en.wikipedia.org/wiki/Charles_Oliveira" , target=" _blank">Charles Oliveira</a> vs
-                    <a href="https://en.wikipedia.org/wiki/Michael_Chandler" , target="_blank">Michael Chandler</a>
+                <li> <a href="https://en.wikipedia.org/wiki/Charles_Oliveira" , target=" _blank">Edson Barboza</a> vs
+                    <a href="https://en.wikipedia.org/wiki/Michael_Chandler" , target="_blank">Shane Burgos</a>
                 </li>
-                <li></li>
-                <li>Rogério Bontorin vs Matt Schnell</li>
-                <li>Katlyn Chookagian vs Viviane Araújo</li>
-                <li>Edson Barboza vs Shane Burgos</li>
+
             </ol>
         </section>
 
