Link updation for all

--- a/UFC/UFC.html
+++ b/UFC/UFC.html
@@ -36,18 +36,20 @@
                 <li> <a href="https://en.wikipedia.org/wiki/Charles_Oliveira" , target=" _blank">Charles Oliveira</a> vs
                     <a href="https://en.wikipedia.org/wiki/Michael_Chandler" , target="_blank">Michael Chandler</a>
                 </li>
-                <li> <a href="https://en.wikipedia.org/wiki/Charles_Oliveira" , target=" _blank">Beneil Dariush</a> vs
-                    <a href="https://en.wikipedia.org/wiki/Michael_Chandler" , target="_blank">Tony Ferguson</a>
+                <li> <a href="https://en.wikipedia.org/wiki/Beneil_Dariush" , target=" _blank">Beneil Dariush</a> vs
+                    <a href="https://en.wikipedia.org/wiki/Tony_Ferguson" , target="_blank">Tony Ferguson</a>
                 </li>
-                <li> <a href="https://en.wikipedia.org/wiki/Charles_Oliveira" , target=" _blank">Rogerio Bontorin</a> vs
-                    <a href="https://en.wikipedia.org/wiki/Michael_Chandler" , target="_blank">Matt Schnell</a>
+                <li> <a href="https://en.wikipedia.org/wiki/Rog%C3%A9rio_Bontorin" , target=" _blank">Rogerio
+                        Bontorin</a> vs
+                    <a href="https://en.wikipedia.org/wiki/Matt_Schnell" , target="_blank">Matt Schnell</a>
                 </li>
-                <li> <a href="https://en.wikipedia.org/wiki/Charles_Oliveira" , target=" _blank">Katlyn Chookagian</a>
+                <li> <a href="https://en.wikipedia.org/wiki/Katlyn_Chookagian" , target=" _blank">Katlyn Chookagian</a>
                     vs
-                    <a href="https://en.wikipedia.org/wiki/Michael_Chandler" , target="_blank">Viviane Araujo</a>
+                    <a href="https://en.wikipedia.org/wiki/Viviane_Ara%C3%BAjo_(fighter)" , target="_blank">Viviane
+                        Araujo</a>
                 </li>
-                <li> <a href="https://en.wikipedia.org/wiki/Charles_Oliveira" , target=" _blank">Edson Barboza</a> vs
-                    <a href="https://en.wikipedia.org/wiki/Michael_Chandler" , target="_blank">Shane Burgos</a>
+                <li> <a href="https://en.wikipedia.org/wiki/Edson_Barboza" , target=" _blank">Edson Barboza</a> vs
+                    <a href="https://en.wikipedia.org/wiki/Shane_Burgos" , target="_blank">Shane Burgos</a>
                 </li>
 
             </ol>
