--- a/List.html
+++ b/List.html
@@ -17,6 +17,16 @@
         <dd> - They are Oranges</dd>
     </dl>
 
+    <table>
+        <thead>
+            <tr>
+                <td>Row 1</td>
+                <td>Row 2</td>
+                <td>Row 3</td>
+            </tr>
+        </thead>
+    </table>
+
 </body>
 
 </html>
