--- a/List.html
+++ b/List.html
@@ -25,6 +25,18 @@
                 <td>Row 3</td>
             </tr>
         </thead>
+
+        <tbody>
+            <tr>
+                <td colspan="2">Maths & Computer science</td>
+                <td>English</td>
+            </tr>
+            <tr>
+                <td colspan="1">Maths</td>
+                <td>English</td>
+                <td>Hindi</td>
+            </tr>
+        </tbody>
     </table>
 
 </body>
