--- a/List.html
+++ b/List.html
@@ -20,9 +20,9 @@
     <table>
         <thead>
             <tr>
-                <td>Row 1</td>
-                <td>Row 2</td>
-                <td>Row 3</td>
+                <th>Row 1</th>
+                <th>Row 2</th>
+                <th>Row 3</th>
             </tr>
         </thead>
 
