--- a/List.html
+++ b/List.html
@@ -19,6 +19,9 @@
 
     <table>
         <thead>
+            <caption>
+                <b>Time Table</b>
+            </caption>
             <tr>
                 <th>Row 1</th>
                 <th>Row 2</th>
