Table implementation (colspan

--- a/List.html
+++ b/List.html
@@ -20,7 +20,7 @@
     <table>
         <thead>
             <caption>
-                <b>Time Table</b>
+                <h2>Time Table</h2>
             </caption>
             <tr>
                 <th>Row 1</th>
@@ -31,8 +31,9 @@
 
         <tbody>
             <tr>
-                <td colspan="2">Maths & Computer science</td>
+                <td colspan="2">Maths & Comp sci</td>
                 <td>English</td>
+                <td>Extra period</td>
             </tr>
             <tr>
                 <td colspan="1">Maths</td>
