--- a/List.html
+++ b/List.html
@@ -9,39 +9,49 @@
 </head>
 
 <body>
+    <section>
+        <dl>
+            <dt>Apples</dt>
+            <dd> - They are red</dd>
+            <dt>Oranges</dt>
+            <dd> - They are Oranges</dd>
+        </dl>
+    </section>
 
-    <dl>
-        <dt>Apples</dt>
-        <dd> - They are red</dd>
-        <dt>Oranges</dt>
-        <dd> - They are Oranges</dd>
-    </dl>
+    <section>
+        <table>
+            <thead>
+                <caption>
+                    <h2>Time Table</h2>
+                </caption>
+                <tr>
+                    <th>Row 1</th>
+                    <th>Row 2</th>
+                    <th>Row 3</th>
+                </tr>
+            </thead>
 
-    <table>
-        <thead>
-            <caption>
-                <h2>Time Table</h2>
-            </caption>
-            <tr>
-                <th>Row 1</th>
-                <th>Row 2</th>
-                <th>Row 3</th>
-            </tr>
-        </thead>
+            <tbody>
+                <tr>
+                    <td colspan="2">Maths & Comp sci</td>
+                    <td>English</td>
+                    <td>Extra period</td>
+                </tr>
+                <tr>
+                    <td colspan="1">Maths</td>
+                    <td>English</td>
+                    <td>Hindi</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
 
-        <tbody>
-            <tr>
-                <td colspan="2">Maths & Comp sci</td>
-                <td>English</td>
-                <td>Extra period</td>
-            </tr>
-            <tr>
-                <td colspan="1">Maths</td>
-                <td>English</td>
-                <td>Hindi</td>
-            </tr>
-        </tbody>
-    </table>
+    <section>
+        <!--Divs & Spans
+        
+        Containers: A set of tags that wraps other html elements-->
+
+    </section>
 
 </body>
 
