Block vs Inline elements

--- a/List.html
+++ b/List.html
@@ -48,8 +48,15 @@
 
     <section>
         <!--Divs & Spans
-        
-        Containers: A set of tags that wraps other html elements-->
+        Containers: A set of tags that wraps other html elements
+    
+        Different ways the elements are displayed in html
+
+        1. Block element: Take the whole width of the page.
+        2. Inline element: Take as much space as they need.
+        -->
+
+
 
     </section>
 
