Inline element = link

--- a/List.html
+++ b/List.html
@@ -18,6 +18,9 @@
         </dl>
     </section>
 
+    <br />
+    <hr />
+
     <section>
         <table>
             <thead>
@@ -46,6 +49,8 @@
         </table>
     </section>
 
+    <br />
+    <hr />
     <section>
         <!--Divs & Spans
         Containers: A set of tags that wraps other html elements
@@ -55,6 +60,9 @@
         1. Block element: Take the whole width of the page.
         2. Inline element: Take as much space as they need.
         -->
+
+        <a href="$">link 1</a>
+        <a href="$">Link 2</a>
 
 
 
