Block element = paragraph

--- a/List.html
+++ b/List.html
@@ -64,6 +64,8 @@
         <a href="$">link 1</a>
         <a href="$">Link 2</a>
 
+        <p>Paragraph 1</p>
+        <p>Paragraph 2</p>
 
 
     </section>
