--- a/List.html
+++ b/List.html
@@ -59,13 +59,13 @@
 
         1. Block element: Take the whole width of the page.
         2. Inline element: Take as much space as they need.
-        -->
+        
+            spans = inline containers
+            divs = block containers
+    -->
 
-        <a href="$">link 1</a>
-        <a href="$">Link 2</a>
-
-        <p>Paragraph 1</p>
-        <p>Paragraph 2</p>
+        <span>span 1</span>
+        <span>span 2</span>
 
 
     </section>
