--- a/List.html
+++ b/List.html
@@ -67,6 +67,11 @@
         <span>span 1</span>
         <span>span 2</span>
 
+        <hr />
+
+        <div>Div 1</div>
+        <div>Div 2</div>
+
 
     </section>
 
