--- a/List.html
+++ b/List.html
@@ -75,6 +75,18 @@
 
     </section>
 
+    <br />
+    <hr />
+
+    <section>
+        <input type="text" value="Enter your username" />
+        <input type="password" />
+
+        <textarea rows="10" cols="30">
+            Enter a paragraph
+        </textarea>
+    </section>
+
 </body>
 
 </html>
