--- a/List.html
+++ b/List.html
@@ -81,6 +81,9 @@
     <section>
         <input type="text" value="Enter your username" />
         <input type="password" />
+        <input type="date" />
+        <input type="range" />
+        <input type="file" />
 
         <textarea rows="10" cols="30">
             Enter a paragraph
