radio vs checkbox tag

--- a/List.html
+++ b/List.html
@@ -84,10 +84,14 @@
         <input type="date" />
         <input type="range" />
         <input type="file" />
+        <input name="hello" type="checkbox" />
+        <input type="checkbox" />
 
         <textarea rows="10" cols="30">
             Enter a paragraph
         </textarea>
+
+        <input type="submit" />
     </section>
 
 </body>
