--- a/List.html
+++ b/List.html
@@ -79,19 +79,24 @@
     <hr />
 
     <section>
-        <input type="text" value="Enter your username" />
-        <input type="password" />
-        <input type="date" />
-        <input type="range" />
-        <input type="file" />
-        <input name="hello" type="checkbox" />
-        <input type="checkbox" />
+        <form>
+            <input type="text" value="Enter your username" />
+            <input type="password" />
+            <input type="date" />
+            <input type="range" />
+            <input type="file" />
+            <input name="hello" type="checkbox" />
+            <input type="checkbox" />
+            <input name="btn" type="radio">
+            <input name="btn" type="radio">
 
-        <textarea rows="10" cols="30">
+            <textarea rows="10" cols="30">
             Enter a paragraph
         </textarea>
 
-        <input type="submit" />
+            <input type="submit" />
+        </form>
+
     </section>
 
 </body>
