--- a/UFC/Video.html
+++ b/UFC/Video.html
@@ -12,6 +12,8 @@
     <iframe width="1300" height="1000" src="https://www.youtube.com/embed/PZSBcdl34OY" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
+
+        Your browser can not support iframes
     </iframe>
 </body>
 
