Iframe frameborder attribute

--- a/UFC/iframes.html
+++ b/UFC/iframes.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <iframe src="https://giraffeacademy.com" height="1000" width="800">
+    <iframe src="https://amazon.com/" height="1000" width="800" frameborder="0">
         Sorry
     </iframe>
 </body>
