--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="This is an awesome website">
+    <meta name="author" content="Mohit">
+    <meta name="keywords" content="HTML, Tutorial, Mohit Sharma">
     <title>Mohit's Website</title>
 </head>
 
