--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="This is an awesome website">
     <meta name="author" content="Mohit">
     <meta name="keywords" content="HTML, Tutorial, Mohit Sharma">
-    <title>Mohit's Website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" <title>Mohit's Website</title>
 </head>
 
 <body style="background-color:thistle;">
