--- a/HTML practise/index.html
+++ b/HTML practise/index.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="index2.html" ; target="_blank">
                 <h1 style="color: yellowgreen; background-color: royalblue">
-                    Page 2 <b>Homepage</b>
+                    Page 2 <b>Homepages</b>
                 </h1>
             </a>
 
