--- a/HTML practise/UFC/UFC.html
+++ b/HTML practise/UFC/UFC.html
@@ -15,8 +15,8 @@
 
     <main>
         <a href="Video.html" ; target="_blank">
-            <img width=1250, src="https://www.mykhel.com/img/2021/05/ufc-262-poster-1620802055.jpg" ,
-                alt="UFC 262 Poster" , />
+            <img width=600, src="https://www.mykhel.com/img/2021/05/ufc-262-poster-1620802055.jpg" ,
+                alt="UFC 262 Poster" />
         </a>
         <hr />
         <section>
