--- a/HTML practise/UFC/UFC.html
+++ b/HTML practise/UFC/UFC.html
@@ -18,9 +18,16 @@
         </a>
 
         <hr />
+
+        <nav>
+            <ul>
+                <li><a href="#FightCard">Fight Card</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
+
 
         <section>
             <p style="color:rgb(245, 209, 9); background-color: black; font-size: x-large; text-align: center;">UFC 262:
@@ -34,7 +41,7 @@
 
         <hr />
 
-        <section style="text-align: center; background-color: black;">
+        <section id="FightCard" style="text-align: center; background-color: black;">
             <ol type="I" , style="font-weight: bolder; color:rgb(245, 209, 9)">
                 <li> <a href="https://en.wikipedia.org/wiki/Charles_Oliveira" , target=" _blank">Charles Oliveira</a> vs
                     <a href="https://en.wikipedia.org/wiki/Michael_Chandler" , target="_blank">Michael Chandler</a>
