--- a/HTML practise/UFC/UFC.html
+++ b/HTML practise/UFC/UFC.html
@@ -22,24 +22,14 @@
         <nav>
             <ul>
                 <li><a href="#FightCard">Fight Card</a></li>
+                <li><a href="#Background">Background</a></li>
+                <li><a href="#Background">Results</a></li>
+                <li><a href="#Background">Bonuses</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-
-
-        <section>
-            <p style="color:rgb(245, 209, 9); background-color: black; font-size: x-large; text-align: center;">UFC 262:
-                Oliveira vs. Chandler
-                was a mixed martial
-                arts event produced by the Ultimate
-                Fighting Championship
-                that took place on May 15, 2021 at the Toyota Center in Houston, Texas, United States.
-            </p>
-        </section>
-
-        <hr />
 
         <section id="FightCard" style="text-align: center; background-color: black;">
             <ol type="I" , style="font-weight: bolder; color:rgb(245, 209, 9)">
@@ -63,6 +53,17 @@
                 </li>
 
             </ol>
+        </section>
+
+
+        <section id="Background">
+            <p style="color:rgb(245, 209, 9); background-color: black; font-size: x-large; text-align: center;">UFC 262:
+                Oliveira vs. Chandler
+                was a mixed martial
+                arts event produced by the Ultimate
+                Fighting Championship
+                that took place on May 15, 2021 at the Toyota Center in Houston, Texas, United States.
+            </p>
         </section>
 
         <section>
