--- a/HTML practise/UFC/UFC.html
+++ b/HTML practise/UFC/UFC.html
@@ -17,8 +17,20 @@
                 alt="UFC 262 Poster" />
         </a>
 
+
+        <section id="Background">
+            <p style="color:rgb(245, 209, 9); background-color: black; font-size: medium; text-align: center;">UFC 262:
+                Oliveira vs. Chandler
+                was a mixed martial
+                arts event produced by the Ultimate
+                Fighting Championship
+                that took place on May 15, 2021 at the Toyota Center in Houston, Texas, United States.
+            </p>
+        </section>
+
         <hr />
 
+        <h3>Contents</h3>
         <nav>
             <ul>
                 <li><a href="#FightCard">Fight Card</a></li>
@@ -56,18 +68,9 @@
         </section>
 
 
-        <section id="Background">
-            <p style="color:rgb(245, 209, 9); background-color: black; font-size: x-large; text-align: center;">UFC 262:
-                Oliveira vs. Chandler
-                was a mixed martial
-                arts event produced by the Ultimate
-                Fighting Championship
-                that took place on May 15, 2021 at the Toyota Center in Houston, Texas, United States.
-            </p>
-        </section>
 
         <section>
-            <p style="color:rgb(245, 209, 9); background-color: black; font-size: large; text-align: center;">A UFC
+            <p style="color:rgb(245, 209, 9); background-color: black; font-size: large; text-align: justify;">A UFC
                 Lightweight Championship bout for the vacant title between former three-time Bellator Lightweight
                 World Champion Michael Chandler and Charles Oliveira headlined the event. Former champion Khabib
                 Nurmagomedov announced his retirement immediately after defending his title at UFC 254 last October,
