--- a/HTML practise/UFC/UFC.html
+++ b/HTML practise/UFC/UFC.html
@@ -82,7 +82,9 @@
     </main>
 
     <footer>
-
+        <div>&copy; Ultimate Fighting Championship</div>
+        <div>Made with &#10084 by <a href='https://www.linkedin.com/in/mohit-sharma-a4531a173/' , target="_blank">Mohit
+                Sharma</a></div>
     </footer>
 
 
