Fight Card (OL)

--- a/HTML practise/UFC/UFC.html
+++ b/HTML practise/UFC/UFC.html
@@ -34,6 +34,11 @@
         <nav>
             <ul>
                 <li><a href="#FightCard">Fight Card</a></li>
+                <ol>
+                    <li><a href="#FightCard">Main Card</a></li>
+                    <li><a href="#FightCard">Prelims</a></li>
+                    <li><a href="#FightCard">Fight Pass</a></li>
+                </ol>
                 <li><a href="#Background">Background</a></li>
                 <li><a href="#Background">Results</a></li>
                 <li><a href="#Background">Bonuses</a></li>
