--- a/HTML practise/UFC/UFC.html
+++ b/HTML practise/UFC/UFC.html
@@ -35,11 +35,11 @@
             <ul>
                 <li><a href="#FightCard">Fight Card</a></li>
                 <ol>
-                    <li><a href="#FightCard">Main Card</a></li>
-                    <li><a href="#FightCard">Prelims</a></li>
-                    <li><a href="#FightCard">Fight Pass</a></li>
+                    <li><a href="#MainCard">Main Card</a></li>
+                    <li><a href="">Prelims</a></li>
+                    <li><a href="">Fight Pass</a></li>
                 </ol>
-                <li><a href="#Background">Background</a></li>
+                <li><a href=" #Background">Background</a></li>
                 <li><a href="#Background">Results</a></li>
                 <li><a href="#Background">Bonuses</a></li>
             </ul>
@@ -48,8 +48,12 @@
 
     <main>
 
-        <section id="FightCard" style="text-align: center; background-color: black;">
-            <ol type="I" , style="font-weight: bolder; color:rgb(245, 209, 9)">
+        <h3 id="FightCard">Fight Card</h3>
+
+        <section id="MainCard" style="text-align: center">
+
+            <h4><b>Main Card</b></h4>
+            <ol type="1" , style="font-weight: bolder; color:rgb(184, 38, 38)">
                 <li> <a href="https://en.wikipedia.org/wiki/Charles_Oliveira" , target=" _blank">Charles Oliveira</a> vs
                     <a href="https://en.wikipedia.org/wiki/Michael_Chandler" , target="_blank">Michael Chandler</a>
                 </li>
