--- a/HTML practise/UFC/UFC.html
+++ b/HTML practise/UFC/UFC.html
@@ -36,7 +36,7 @@
                 <li><a href="#FightCard">Fight Card</a></li>
                 <ol>
                     <li><a href="#MainCard">Main Card</a></li>
-                    <li><a href="">Prelims</a></li>
+                    <li><a href="#Prelims">Prelims</a></li>
                     <li><a href="">Fight Pass</a></li>
                 </ol>
                 <li><a href=" #Background">Background</a></li>
@@ -76,6 +76,28 @@
             </ol>
         </section>
 
+        <section id="Prelims" style="text-align: center">
+
+            <h4><b>Prelims</b></h4>
+            <ol type="1" , style="font-weight: bolder; color:rgb(184, 38, 38)">
+                <li> <a href="https://en.wikipedia.org/wiki/Charles_Oliveira" , target=" _blank">Andre Muniz</a> vs
+                    <a href="https://en.wikipedia.org/wiki/Michael_Chandler" , target="_blank">Ronaldo Souza</a>
+                </li>
+                <li> <a href="https://en.wikipedia.org/wiki/Beneil_Dariush" , target=" _blank">Lando Vannata</a> vs
+                    <a href="https://en.wikipedia.org/wiki/Tony_Ferguson" , target="_blank">Mike Grundy</a>
+                </li>
+                <li> <a href="https://en.wikipedia.org/wiki/Rog%C3%A9rio_Bontorin" , target=" _blank">Jordan Wright</a>
+                    vs
+                    <a href="https://en.wikipedia.org/wiki/Matt_Schnell" , target="_blank">Jamie Pickett</a>
+                </li>
+                <li> <a href="https://en.wikipedia.org/wiki/Katlyn_Chookagian" , target=" _blank">Andrea Lee</a>
+                    vs
+                    <a href="https://en.wikipedia.org/wiki/Viviane_Ara%C3%BAjo_(fighter)" , target="_blank">Antonina
+                        Shevchenko</a>
+                </li>
+
+            </ol>
+        </section>
 
 
         <section>
