Fight pass linkind

--- a/HTML practise/UFC/UFC.html
+++ b/HTML practise/UFC/UFC.html
@@ -37,7 +37,7 @@
                 <ol>
                     <li><a href="#MainCard">Main Card</a></li>
                     <li><a href="#Prelims">Prelims</a></li>
-                    <li><a href="">Fight Pass</a></li>
+                    <li><a href="#FightPass">Fight Pass</a></li>
                 </ol>
                 <li><a href=" #Background">Background</a></li>
                 <li><a href="#Background">Results</a></li>
@@ -76,29 +76,51 @@
             </ol>
         </section>
 
-        <section id="Prelims" style="text-align: center">
+        <section name="Prelims" style="text-align: center">
 
             <h4><b>Prelims</b></h4>
             <ol type="1" , style="font-weight: bolder; color:rgb(184, 38, 38)">
-                <li> <a href="https://en.wikipedia.org/wiki/Charles_Oliveira" , target=" _blank">Andre Muniz</a> vs
-                    <a href="https://en.wikipedia.org/wiki/Michael_Chandler" , target="_blank">Ronaldo Souza</a>
+                <li> <a href="https://en.wikipedia.org/wiki/Andr%C3%A9_Muniz" , target=" _blank">Andre Muniz</a> vs
+                    <a href="https://en.wikipedia.org/wiki/Ronaldo_Souza" , target="_blank">Ronaldo Souza</a>
                 </li>
-                <li> <a href="https://en.wikipedia.org/wiki/Beneil_Dariush" , target=" _blank">Lando Vannata</a> vs
-                    <a href="https://en.wikipedia.org/wiki/Tony_Ferguson" , target="_blank">Mike Grundy</a>
+                <li> <a href="https://en.wikipedia.org/wiki/Lando_Vannata" , target=" _blank">Lando Vannata</a> vs
+                    <a href="https://en.wikipedia.org/wiki/Mike_Grundy" , target="_blank">Mike Grundy</a>
                 </li>
-                <li> <a href="https://en.wikipedia.org/wiki/Rog%C3%A9rio_Bontorin" , target=" _blank">Jordan Wright</a>
+                <li> <a href="https://en.wikipedia.org/wiki/Jordan_Wright" , target=" _blank">Jordan Wright</a>
                     vs
-                    <a href="https://en.wikipedia.org/wiki/Matt_Schnell" , target="_blank">Jamie Pickett</a>
+                    Jamie Pickett
                 </li>
-                <li> <a href="https://en.wikipedia.org/wiki/Katlyn_Chookagian" , target=" _blank">Andrea Lee</a>
+                <li> <a href="https://en.wikipedia.org/wiki/Andrea_Lee_(fighter)" , target=" _blank">Andrea Lee</a>
                     vs
-                    <a href="https://en.wikipedia.org/wiki/Viviane_Ara%C3%BAjo_(fighter)" , target="_blank">Antonina
+                    <a href="https://en.wikipedia.org/wiki/Antonina_Shevchenko" , target="_blank">Antonina
                         Shevchenko</a>
                 </li>
 
             </ol>
         </section>
 
+        <section id="FightPass" style="text-align: center">
+
+            <h4><b>Prelims</b></h4>
+            <ol type="1" , style="font-weight: bolder; color:rgb(184, 38, 38)">
+                <li> <a href="https://en.wikipedia.org/wiki/Andr%C3%A9_Muniz" , target=" _blank">Andre Muniz</a> vs
+                    <a href="https://en.wikipedia.org/wiki/Ronaldo_Souza" , target="_blank">Ronaldo Souza</a>
+                </li>
+                <li> <a href="https://en.wikipedia.org/wiki/Lando_Vannata" , target=" _blank">Lando Vannata</a> vs
+                    <a href="https://en.wikipedia.org/wiki/Mike_Grundy" , target="_blank">Mike Grundy</a>
+                </li>
+                <li> <a href="https://en.wikipedia.org/wiki/Jordan_Wright" , target=" _blank">Jordan Wright</a>
+                    vs
+                    Jamie Pickett
+                </li>
+                <li> <a href="https://en.wikipedia.org/wiki/Andrea_Lee_(fighter)" , target=" _blank">Andrea Lee</a>
+                    vs
+                    <a href="https://en.wikipedia.org/wiki/Antonina_Shevchenko" , target="_blank">Antonina
+                        Shevchenko</a>
+                </li>
+
+            </ol>
+        </section>
 
         <section>
             <p style="color:rgb(245, 209, 9); background-color: black; font-size: large; text-align: justify;">A UFC
