--- a/HTML practise/UFC/UFC.html
+++ b/HTML practise/UFC/UFC.html
@@ -101,22 +101,18 @@
 
         <section id="FightPass" style="text-align: center">
 
-            <h4><b>Prelims</b></h4>
+            <h4><b>Fight Pass</b></h4>
             <ol type="1" , style="font-weight: bolder; color:rgb(184, 38, 38)">
-                <li> <a href="https://en.wikipedia.org/wiki/Andr%C3%A9_Muniz" , target=" _blank">Andre Muniz</a> vs
-                    <a href="https://en.wikipedia.org/wiki/Ronaldo_Souza" , target="_blank">Ronaldo Souza</a>
-                </li>
-                <li> <a href="https://en.wikipedia.org/wiki/Lando_Vannata" , target=" _blank">Lando Vannata</a> vs
-                    <a href="https://en.wikipedia.org/wiki/Mike_Grundy" , target="_blank">Mike Grundy</a>
-                </li>
-                <li> <a href="https://en.wikipedia.org/wiki/Jordan_Wright" , target=" _blank">Jordan Wright</a>
+                <li> <a href="https://en.wikipedia.org/wiki/Andr%C3%A9_Muniz" , target=" _blank">Priscila Cachoeira</a>
                     vs
-                    Jamie Pickett
+                    <a href="https://en.wikipedia.org/wiki/Ronaldo_Souza" , target="_blank">Gina Mazany</a>
                 </li>
-                <li> <a href="https://en.wikipedia.org/wiki/Andrea_Lee_(fighter)" , target=" _blank">Andrea Lee</a>
+                <li> <a href="https://en.wikipedia.org/wiki/Lando_Vannata" , target=" _blank">Tucket Lutz</a> vs
+                    <a href="https://en.wikipedia.org/wiki/Mike_Grundy" , target="_blank">Kevin Aguilar</a>
+                </li>
+                <li> <a href="https://en.wikipedia.org/wiki/Jordan_Wright" , target=" _blank">Christos Giagos</a>
                     vs
-                    <a href="https://en.wikipedia.org/wiki/Antonina_Shevchenko" , target="_blank">Antonina
-                        Shevchenko</a>
+                    <a href="https://en.wikipedia.org/wiki/Sean_Soriano" , target="_blank">Sean Soriano</a>
                 </li>
 
             </ol>
