Fight Card final

--- a/HTML practise/UFC/UFC.html
+++ b/HTML practise/UFC/UFC.html
@@ -76,7 +76,7 @@
             </ol>
         </section>
 
-        <section name="Prelims" style="text-align: center">
+        <section id="Prelims" style="text-align: center">
 
             <h4><b>Prelims</b></h4>
             <ol type="1" , style="font-weight: bolder; color:rgb(184, 38, 38)">
@@ -103,14 +103,15 @@
 
             <h4><b>Fight Pass</b></h4>
             <ol type="1" , style="font-weight: bolder; color:rgb(184, 38, 38)">
-                <li> <a href="https://en.wikipedia.org/wiki/Andr%C3%A9_Muniz" , target=" _blank">Priscila Cachoeira</a>
+                <li> <a href="https://en.wikipedia.org/wiki/Priscila_Cachoeira" , target=" _blank">Priscila
+                        Cachoeira</a>
                     vs
-                    <a href="https://en.wikipedia.org/wiki/Ronaldo_Souza" , target="_blank">Gina Mazany</a>
+                    <a href="https://en.wikipedia.org/wiki/Gina_Mazany" , target="_blank">Gina Mazany</a>
                 </li>
-                <li> <a href="https://en.wikipedia.org/wiki/Lando_Vannata" , target=" _blank">Tucket Lutz</a> vs
-                    <a href="https://en.wikipedia.org/wiki/Mike_Grundy" , target="_blank">Kevin Aguilar</a>
+                <li> Tucket Lutz vs
+                    <a href="https://en.wikipedia.org/wiki/Kevin_Aguilar" , target="_blank">Kevin Aguilar</a>
                 </li>
-                <li> <a href="https://en.wikipedia.org/wiki/Jordan_Wright" , target=" _blank">Christos Giagos</a>
+                <li> <a href="https://en.wikipedia.org/wiki/Christos_Giagos" , target=" _blank">Christos Giagos</a>
                     vs
                     <a href="https://en.wikipedia.org/wiki/Sean_Soriano" , target="_blank">Sean Soriano</a>
                 </li>
