--- a/HTML practise/UFC/UFC.html
+++ b/HTML practise/UFC/UFC.html
@@ -18,7 +18,7 @@
         </a>
 
 
-        <section id="Background">
+        <section name="Preview">
             <p style="color:rgb(245, 209, 9); background-color: black; font-size: medium; text-align: center;">UFC 262:
                 Oliveira vs. Chandler
                 was a mixed martial
@@ -30,7 +30,7 @@
 
         <hr />
 
-        <h3>Contents</h3>
+        <h3 style="color: rgb(202, 61, 18);">Contents</h3>
         <nav>
             <ul>
                 <li><a href="#FightCard">Fight Card</a></li>
@@ -39,16 +39,18 @@
                     <li><a href="#Prelims">Prelims</a></li>
                     <li><a href="#FightPass">Fight Pass</a></li>
                 </ol>
-                <li><a href=" #Background">Background</a></li>
-                <li><a href="#Background">Results</a></li>
-                <li><a href="#Background">Bonuses</a></li>
+                <li><a href="#Background">Background</a></li>
+                <li><a href="">Results</a></li>
+                <li><a href="">Bonuses</a></li>
             </ul>
         </nav>
     </header>
 
+    <hr />
+
     <main>
 
-        <h3 id="FightCard">Fight Card</h3>
+        <h3 id="FightCard" ; style="color: rgb(202, 61, 18);">Fight Card</h3>
 
         <section id="MainCard" style="text-align: center">
 
@@ -119,10 +121,16 @@
             </ol>
         </section>
 
-        <section>
-            <p style="color:rgb(245, 209, 9); background-color: black; font-size: large; text-align: justify;">A UFC
+        <hr />
+
+        <section id="Background" ; style="color: rgb(202, 61, 18);">
+
+            <h3>Background</h3>
+
+            <p style="color:rgb(0, 0, 0);font-weight: 600; font-size: medium; text-align: justify;">A UFC
                 Lightweight Championship bout for the vacant title between former three-time Bellator Lightweight
-                World Champion Michael Chandler and Charles Oliveira headlined the event. Former champion Khabib
+                World Champion Michael&nbsp;Chandler&nbsp;and&nbsp;Charles&nbsp;Oliveira headlined the event. Former
+                champion Khabib
                 Nurmagomedov announced his retirement immediately after defending his title at UFC 254 last October,
                 citing his father's death from complications related to COVID-19 in July as the main reason behind
                 it. Despite his announcement, the title was never officially vacated as UFC President Dana White said
