--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </section>
 
         <section>
-            <p style="color:rgb(245, 209, 9); background-color: black; font-size: large; text-align: justify;">A UFC
+            <p style="color:rgb(0, 0, 0); font-size: medium; text-align: justify;">A UFC
                 Lightweight Championship bout for the vacant title between former three-time Bellator Lightweight
                 World Champion Michael Chandler and Charles Oliveira headlined the event. Former champion Khabib
                 Nurmagomedov announced his retirement immediately after defending his title at UFC 254 last October,
